# EduAI-Studio-

./: .gitignore  PROGRESS.md  README.md  bugs.md  plan.md  promp.md  pyproject.toml
UI-mockups/interactive_knowledge_quiz/: code.html
UI-mockups/personalized_curriculum_roadmap/: code.html
specs/: 04-frontend-architecture.md
src/: app.py  main.py
src/learning_agent/: agent.py  agent_engine_app.py  requirements.txt
src/learning_agent/tools/: __init__.py  web_fetcher.py
src/templates/: chat.html  code.html  dashboard.html  profile.html  quiz.html  quiz_results.html  resources.html  roadmap.html
tests/: test_agent.py  test_app.py
